5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1716_2499.log
== TEST (2019-05-11 13:14:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while numeroK != 0:
	soma = (numeroK / factorial(x))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))


-- OUTPUT:
8.0
4.5
2.16666667
1.29166667
1.05833333
1.00972222
1.00138889
1.00017361
1.00001929
1.00000193
1.00000018
1.00000001
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:15:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while numeroK != 0:
	soma = (numeroK / factorial(x))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))


-- OUTPUT:
8.0
4.5
2.16666667
1.29166667
1.05833333
1.00972222
1.00138889
1.00017361
1.00001929
1.00000193
1.00000018
1.00000001
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:35:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while numeroK != 0:
	soma = (numeroK / factorial(x))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))


-- EXECUTION TIME:
390.163
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:51:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while numeroK != 0:
	soma = (numeroK / factorial(x))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))
	print (round(soma,8))


-- OUTPUT:
8.0
8.0
4.5
4.5
2.16666667
2.16666667
1.29166667
1.29166667
1.05833333
1.05833333
1.00972222
1.00972222
1.00138889
1.00138889
1.00017361
1.00017361
1.00001929
1.00001929
1.00000193
1.00000193
1.00000018
1.00000018
1.00000001
1.00000001
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:54:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0

while numeroK != 0:
	soma = (1 / factorial(numeroK))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))
	print (round(soma,8))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = x + 1
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:55:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0

while numeroK != 0:
	soma = (1 / factorial(numeroK))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))
	print (round(soma,8))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = x + 1
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:55:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0

while numeroK != 0:
	soma = (1 / factorial(numeroK))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    x = x + 1
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 19:56:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0

while numeroK != 0:
	soma = (1 / factorial(numeroK))
	soma = soma + 1
	
	print (round(soma,8))
-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:11:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while numeroK != 0:
	soma = (numeroK / factorial(x))
	x = x + 1
	soma = soma + 1
	
	print (round(soma,8))
	print (round(soma,8))


-- EXECUTION TIME:
823.414
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:26:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
0.029063
-- ERROR:
Error response from daemon: Container 7750cf393d0a684d3f8b44b5b6e202cd99ea3a8d68a2a7b5a0612e96b04382e6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:26:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:26:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:30:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:30:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 1

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
0.0284591
-- ERROR:
Error response from daemon: Container 7750cf393d0a684d3f8b44b5b6e202cd99ea3a8d68a2a7b5a0612e96b04382e6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:31:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:32:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:33:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
0.0299189
-- ERROR:
Error response from daemon: Container 7750cf393d0a684d3f8b44b5b6e202cd99ea3a8d68a2a7b5a0612e96b04382e6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:50:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:50:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 21:25:00) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
0.031616
-- ERROR:
Error response from daemon: Container 7750cf393d0a684d3f8b44b5b6e202cd99ea3a8d68a2a7b5a0612e96b04382e6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:25:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:17:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 1
x = 1

while (x < numeroK):
	soma = soma + (numeroK **factorial(x+1))
	
	print (round(soma,8))
	
-- OUTPUT:
50
99
148
197
246
295
344
393
442
491
540
589
638
687
736
785
834
883
932
981
1030
1079
1128
1177
1226
1275
1324
1373
1422
1471
1520
1569
1618
1667
1716
1765
1814
1863
1912
1961
2010
2059
2108
2157
2206
2255
2304
2353
2402
2451
2500
2549
2598
2647
2696
2745
2794
2843
2892
2941
2990
3039
3088
3137
3186
3235
3284
3333
3382
3431
3480
3529
3578
3627
3676
3725
3774
3823
3872
3921
3970
4019
4068
4117
4166
4215
4264
4313
4362
4411
4460
4509
4558
4607
4656
4705
4754
4803
4852
4901
4950
4999
5048
5097
5146
5195
5244
5293
5342
5391
5440
5489
5538
5587
5636
5685
5734
5783
5832
5881
5930
5979
6028
6077
6126
6175
6224
6273
6322
6371
6420
6469
6518
6567
6616
6665
6714
6763
6812
6861
6910
6959
7008
7057
7106
7155
7204
7253
7302
7351
7400
7449
7498
7547
7596
7645
7694
7743
7792
7841
7890
7939
7988
8037
8086
8135
8184
8233
8282
8331
8380
8429
8478
8527
8576
8625
8674
8723
8772
8821
8870
8919
8968
9017
9066
9115
9164
9213
9262
9311
9360
9409
9458
9507
9556
9605
9654
9703
9752
9801
9850
9899
9948
9997
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:18:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 1
x = 1

while (x < numeroK):
	soma = soma + (numeroK **factorial(x))
	
	print (round(soma,8))
	
-- OUTPUT:
8
15
22
29
36
43
50
57
64
71
78
85
92
99
106
113
120
127
134
141
148
155
162
169
176
183
190
197
204
211
218
225
232
239
246
253
260
267
274
281
288
295
302
309
316
323
330
337
344
351
358
365
372
379
386
393
400
407
414
421
428
435
442
449
456
463
470
477
484
491
498
505
512
519
526
533
540
547
554
561
568
575
582
589
596
603
610
617
624
631
638
645
652
659
666
673
680
687
694
701
708
715
722
729
736
743
750
757
764
771
778
785
792
799
806
813
820
827
834
841
848
855
862
869
876
883
890
897
904
911
918
925
932
939
946
953
960
967
974
981
988
995
1002
1009
1016
1023
1030
1037
1044
1051
1058
1065
1072
1079
1086
1093
1100
1107
1114
1121
1128
1135
1142
1149
1156
1163
1170
1177
1184
1191
1198
1205
1212
1219
1226
1233
1240
1247
1254
1261
1268
1275
1282
1289
1296
1303
1310
1317
1324
1331
1338
1345
1352
1359
1366
1373
1380
1387
1394
1401
1408
1415
1422
1429
1436
1443
1450
1457
1464
1471
1478
1485
1492
1499
1506
1513
1520
1527
1534
1541
1548
1555
1562
1569
1576
1583
1590
1597
1604
1611
1618
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:20:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

soma = 1
x = 1

while (x < k):
	soma = soma + (k **factorial(x))
	
	print (round(soma,8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:22:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	soma = soma + (k **factorial(x))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
1.08533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 7, in <module>
    x = eval(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:25:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	soma = soma + (1 **factorial(x))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
0.509432
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 7, in <module>
    x = eval(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:25:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	soma = soma + (1 ** 1/factorial(x))
	
	print (round(soma,8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:25:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1
sinal = -1
soma = x
expoente = 3

while (x < k):
	soma = soma + (1 ** 1/factorial(x))
	
	print (round(soma,8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:30:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 0
x = 0

while (x <= numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
1050.12
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:35:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 1
x = 1

while (x < numeroK):
	soma = 1 + (1 / factorial(x+1))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
1215.49
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:36:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

numeroK = int(input("Informe um numero: "))

soma = 1
x = 1

while (x < numeroK):
	soma = soma + (1 **factorial(x+1))
	
	print (round(soma,8))
	
-- EXECUTION TIME:
1165.82
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:54:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))
x = eval(input("Informe valor de x: "))

contador = 1

soma = x


while (x < k):
	soma = soma + (1 ** 1/factorial(x))
	
print (round(soma,8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = eval(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:54:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 1

soma = x


while (contador < k):
	soma = soma + (1 ** 1/factorial(x))
	contador = contador + 1
	
print (round(soma,8))
	
-- EXECUTION TIME:
0.213637
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2499/main.py", line 10, in <module>
    soma = x
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:54:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 1

soma = x


while (contador < k):
	soma = soma + (1 ** 1/factorial(x))
	contador = contador + 1
	
print (round(soma,8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:54:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 1
soma = 1


while (contador < k):
	soma = soma + (1 ** 1/factorial(x))
	contador = contador + 1
	
print (round(soma,8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    soma = soma + (1 ** 1/factorial(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:55:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 1
soma = 1


while (contador < k):
	soma = soma + (1 ** 1/factorial(k))
	contador = contador + 1
	
print (round(soma,8))
	
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 1
soma = 1


while (contador < k):
	soma = soma + 1 + (1/factorial(k))
	contador = contador + 1
	
print (round(soma,8))
	
-- OUTPUT:
7.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:01:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 1
soma = 1


while (contador < k):
	soma = soma + (1/factorial(k))
	contador = contador + 1
	
print (round(soma,8))
	
-- OUTPUT:
1.00119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:02:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 0
soma = 1


while (contador < k):
	soma = soma + (1/factorial(k))
	contador = contador + 1
	
print (round(soma,8))
	
-- EXECUTION TIME:
0.150032
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
1.00138889
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
1.0
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
1.00833333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:02:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 0
soma = 1


while (contador < k):
	soma = soma + (1/factorial(k))
	contador = contador + 1
	
print (round(soma,8))
	
-- OUTPUT:
1.00138889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:02:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

contador = 0
soma = 1


while (contador < k):.
	f = factorial(x)
	soma = soma + (1/f)
	contador = contador + 1
	
print (round(soma,8))
	
-- ERROR:
File "XXXX", line 12
    while (contador < k):.
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:30:05) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

i = 0
e = 0

while (e < k):
	e = e + (1 / factorial(i))
	i = i + 1
	
print (round(e,8))
	
-- ERROR:
File "XXXX", line 12
    while (contador < k):.
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:31:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Nathaly Leite

from math import *

k = int(input("Informe um numero: "))

i = 0
e = 0

while (i < k):
	e = e + (1 / factorial(i))
	i = i + 1
	
print (round(e,8))
	
-- EXECUTION TIME:
0.235032
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
